// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelReplacements MastersOnlyLabelReplacement snapshot 1`] = `
<div>
  <FormattedMessage
    defaultMessage="defaultMessAge"
    description="desCripTion"
    id="id"
  />
  <MastersOnlyFieldAsterisk />
</div>
`;

exports[`LabelReplacements TotalGradeLabelReplacement displays overlay tooltip 1`] = `
<Tooltip
  id="course-grade-tooltip"
>
  <FormattedMessage
    defaultMessage="Total Grade values are always displayed as a percentage"
    description="Gradebook table message that total grades are displayed in percent format"
    id="gradebook.GradesView.table.totalGradePercentage"
  />
</Tooltip>
`;

exports[`LabelReplacements TotalGradeLabelReplacement snapshot 1`] = `
<div>
  <OverlayTrigger
    key="left-basic"
    overlay={
      <Tooltip
        id="course-grade-tooltip"
      >
        <FormattedMessage
          defaultMessage="Total Grade values are always displayed as a percentage"
          description="Gradebook table message that total grades are displayed in percent format"
          id="gradebook.GradesView.table.totalGradePercentage"
        />
      </Tooltip>
    }
    placement="left"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <div>
      <FormattedMessage
        defaultMessage="Total Grade (%)"
        description="Gradebook table total grade column header"
        id="gradebook.GradesView.table.headings.totalGrade"
      />
      <div
        id="courseGradeTooltipIcon"
      >
        <Icon
          className="fa fa-info-circle"
          screenReaderText={
            <FormattedMessage
              defaultMessage="Total Grade values are always displayed as a percentage"
              description="Gradebook table message that total grades are displayed in percent format"
              id="gradebook.GradesView.table.totalGradePercentage"
            />
          }
        />
      </div>
    </div>
  </OverlayTrigger>
</div>
`;

exports[`LabelReplacements UsernameLabelReplacement snapshot 1`] = `
<div>
  <div>
    <FormattedMessage
      defaultMessage="Username"
      description="Gradebook table username column header"
      id="gradebook.GradesView.table.headings.username"
    />
  </div>
  <div
    className="font-weight-normal student-key"
  >
    <FormattedMessage
      defaultMessage="Student Key"
      description="Gradebook table Student Key label"
      id="gradebook.GradesView.table.labels.studentKey"
    />
    <MastersOnlyFieldAsterisk />
  </div>
</div>
`;

exports[`snapshot left to right overlay placement 1`] = `
<div>
  <OverlayTrigger
    key="left-basic"
    overlay={
      <Tooltip
        id="course-grade-tooltip"
      >
        <FormattedMessage
          defaultMessage="Total Grade values are always displayed as a percentage"
          description="Gradebook table message that total grades are displayed in percent format"
          id="gradebook.GradesView.table.totalGradePercentage"
        />
      </Tooltip>
    }
    placement="right"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <div>
      <FormattedMessage
        defaultMessage="Total Grade (%)"
        description="Gradebook table total grade column header"
        id="gradebook.GradesView.table.headings.totalGrade"
      />
      <div
        id="courseGradeTooltipIcon"
      >
        <Icon
          className="fa fa-info-circle"
          screenReaderText={
            <FormattedMessage
              defaultMessage="Total Grade values are always displayed as a percentage"
              description="Gradebook table message that total grades are displayed in percent format"
              id="gradebook.GradesView.table.totalGradePercentage"
            />
          }
        />
      </div>
    </div>
  </OverlayTrigger>
</div>
`;

exports[`snapshot right to left overlay placement 1`] = `
<div>
  <OverlayTrigger
    key="left-basic"
    overlay={
      <Tooltip
        id="course-grade-tooltip"
      >
        <FormattedMessage
          defaultMessage="Total Grade values are always displayed as a percentage"
          description="Gradebook table message that total grades are displayed in percent format"
          id="gradebook.GradesView.table.totalGradePercentage"
        />
      </Tooltip>
    }
    placement="left"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <div>
      <FormattedMessage
        defaultMessage="Total Grade (%)"
        description="Gradebook table total grade column header"
        id="gradebook.GradesView.table.headings.totalGrade"
      />
      <div
        id="courseGradeTooltipIcon"
      >
        <Icon
          className="fa fa-info-circle"
          screenReaderText={
            <FormattedMessage
              defaultMessage="Total Grade values are always displayed as a percentage"
              description="Gradebook table message that total grades are displayed in percent format"
              id="gradebook.GradesView.table.totalGradePercentage"
            />
          }
        />
      </div>
    </div>
  </OverlayTrigger>
</div>
`;
